@@ -1,3 +1,4 @@
+- link against libRblas.so if it is found in the R libs dir (needed for some compiles of R 2.4.0)
 - remove whitespace from start and end of plugin generated commands and do not evaluate empty commands
 - do not raise the command log more than once for a given command producing continuous output
 - small improvements to command history in console
